[package]
name = "relo"
version = "0.1.2"
edition = "2022"
authors = ["Abdul Mubarak <abdulmubarak682@gmail.com>"]
description = "A custom programming language with a readable syntax (RELO)."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abdul061/RELO-Programming-language"
repository = "https://github.com/abdul061/RELO-Programming-language"
keywords = ["language", "compiler", "interpreter", "relo"]
categories = ["compilers", "parsing"]
exclude = [".gitignore", ".github/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
itertools = "0.12"
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
